--- a/minigin-main/Minigin/Minigin.vcxproj
+++ b/minigin-main/Minigin/Minigin.vcxproj
@@ -175,7 +175,7 @@
   <ItemGroup>
     <ClInclude Include="Component.h" />
     <ClInclude Include="Font.h" />
-    <ClInclude Include="FPS.h" />
+    <ClInclude Include="ImageComponent.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Bargin.h" />
@@ -191,7 +191,7 @@
   <ItemGroup>
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Font.cpp" />
-    <ClCompile Include="FPS.cpp" />
+    <ClCompile Include="ImageComponent.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
