Excel Assignment - Code 2/3
Repeated the previous exercise but with GameObject3Ds

--- a/TrashTheCache/TrashTheCache.vcxproj
+++ b/TrashTheCache/TrashTheCache.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="TrashTheCache.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameObject3D.h" />
     <ClInclude Include="TrashTheCache.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
