--- a/TrashTheCache/TrashTheCache.vcxproj.filters
+++ b/TrashTheCache/TrashTheCache.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="TrashTheCache.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameObject3D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
