--- a/TrashTheCache/TrashTheCache.vcxproj
+++ b/TrashTheCache/TrashTheCache.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameObject3D.h" />
+    <ClInclude Include="GameObject3DAlt.h" />
     <ClInclude Include="TrashTheCache.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
