--- a/TrashTheCache/TrashTheCache.vcxproj.filters
+++ b/TrashTheCache/TrashTheCache.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="GameObject3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameObject3DAlt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
