--- a/minigin-main/Minigin/Minigin.vcxproj
+++ b/minigin-main/Minigin/Minigin.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="FPSComponent.h" />
     <ClInclude Include="ImageComponent.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="ImGuiCharts.h" />
     <ClInclude Include="imgui_impl_opengl3.h" />
     <ClInclude Include="imgui_impl_sdl2.h" />
     <ClInclude Include="InputManager.h" />
