--- a/minigin-main/Minigin/Minigin.vcxproj.filters
+++ b/minigin-main/Minigin/Minigin.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="imgui_impl_sdl2.h">
       <Filter>Imgui\backend</Filter>
     </ClInclude>
+    <ClInclude Include="ImGuiCharts.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Renderer.cpp">
