--- a/minigin-main/Minigin/Minigin.vcxproj.filters
+++ b/minigin-main/Minigin/Minigin.vcxproj.filters
@@ -31,6 +31,24 @@
     <Filter Include="Imgui\backend">
       <UniqueIdentifier>{b5f7e2c7-649f-41f6-9582-e70f0c9d898d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\TrashTheCache">
+      <UniqueIdentifier>{58d027f6-4996-4234-933b-e02f1acba553}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\TrashTheCache">
+      <UniqueIdentifier>{2d8ca051-f7ab-40aa-a121-0f6705ed9b5f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\InputManager.h">
+      <UniqueIdentifier>{3e0962cf-3cc1-4a60-a0a2-0e2e34011b24}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Components">
+      <UniqueIdentifier>{0b77a9b3-9174-4e5f-86bd-3eadbfdedf7d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Main\InputManager">
+      <UniqueIdentifier>{ed492056-7b09-4122-8098-a381ee2a9703}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Main\InputManager\Commands">
+      <UniqueIdentifier>{f68db4b3-3088-4673-bb9d-9c7b11abb1e1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Singleton.h">
@@ -45,9 +63,6 @@
     <ClInclude Include="Texture2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="InputManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -60,25 +75,10 @@
     <ClInclude Include="SceneManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TextComponent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Font.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Bargin.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Component.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ImageComponent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="FPSComponent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RotationComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\3rdParty\imgui-1.90.4\imgui.h">
@@ -102,11 +102,44 @@
     <ClInclude Include="imgui_impl_sdl2.h">
       <Filter>Imgui\backend</Filter>
     </ClInclude>
-    <ClInclude Include="ImGuiCharts.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\3rdParty\imgui-1.90.4\imgui_plot.h">
       <Filter>Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="ImGuiCharts.h">
+      <Filter>Header Files\TrashTheCache</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject3D.h">
+      <Filter>Header Files\TrashTheCache</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject3DAlt.h">
+      <Filter>Header Files\TrashTheCache</Filter>
+    </ClInclude>
+    <ClInclude Include="TrashTheCache.h">
+      <Filter>Header Files\TrashTheCache</Filter>
+    </ClInclude>
+    <ClInclude Include="InputManager.h">
+      <Filter>Header Files\InputManager.h</Filter>
+    </ClInclude>
+    <ClInclude Include="Command.h">
+      <Filter>Header Files\InputManager.h</Filter>
+    </ClInclude>
+    <ClInclude Include="FPSComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="RotationComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="TextComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Move2DCommand.h">
+      <Filter>Header Files\InputManager.h</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -114,9 +147,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Texture2D.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="InputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Transform.cpp">
@@ -181,6 +211,18 @@
     </ClCompile>
     <ClCompile Include="..\3rdParty\imgui-1.90.4\imgui_plot.cpp">
       <Filter>Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="TrashTheCache.cpp">
+      <Filter>Source Files\TrashTheCache</Filter>
+    </ClCompile>
+    <ClCompile Include="ImGuiCharts.cpp">
+      <Filter>Source Files\TrashTheCache</Filter>
+    </ClCompile>
+    <ClCompile Include="InputManager.cpp">
+      <Filter>Source Files\Main\InputManager</Filter>
+    </ClCompile>
+    <ClCompile Include="Move2DCommand.cpp">
+      <Filter>Source Files\Main\InputManager\Commands</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
