--- a/minigin-main/Minigin/Minigin.vcxproj
+++ b/minigin-main/Minigin/Minigin.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Bargin.h" />
     <ClInclude Include="Move2DCommand.h" />
+    <ClInclude Include="MovementComponent.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="RotationComponent.h" />
@@ -221,7 +222,7 @@
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="FPSComponent.cpp" />
     <ClCompile Include="Controller.cpp" />
-    <ClCompile Include="HealthComponent.cpp" />
+    <ClCompile Include="HealthComponent.h" />
     <ClCompile Include="ImageComponent.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="ImGuiCharts.cpp" />
@@ -231,6 +232,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Bargin.cpp" />
     <ClCompile Include="Move2DCommand.cpp" />
+    <ClCompile Include="MovementComponent.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="RotationComponent.cpp" />
