LifeObserver now outputs message & Tidied Main.cpp

--- a/minigin-main/Minigin/Minigin.vcxproj.filters
+++ b/minigin-main/Minigin/Minigin.vcxproj.filters
@@ -49,11 +49,11 @@
     <Filter Include="Source Files\Main\InputManager\Commands">
       <UniqueIdentifier>{f68db4b3-3088-4673-bb9d-9c7b11abb1e1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Observers">
-      <UniqueIdentifier>{d8f1a819-5e84-4d98-995a-29af988dd5e3}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Observers">
       <UniqueIdentifier>{410b424c-06fb-49fd-8304-1e479aa63555}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Main\Observers">
+      <UniqueIdentifier>{d8f1a819-5e84-4d98-995a-29af988dd5e3}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -261,7 +261,7 @@
       <Filter>Source Files\Main\InputManager\Commands</Filter>
     </ClCompile>
     <ClCompile Include="LifeObserver.cpp">
-      <Filter>Source Files\Observers</Filter>
+      <Filter>Source Files\Main\Observers</Filter>
     </ClCompile>
     <ClCompile Include="HealthComponent.cpp">
       <Filter>Source Files\Main\Scene\GameObject\Components</Filter>
